--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ stages:
         vmImage: windows-2019-vs2019
       steps:
         - publish: $(System.DefaultWorkingDirectory)/
-          artifact: Module
+          artifact: 'mODule'
 
     - job: windows2
       pool:
